...
                    ),
                    placeholder = { Text(text = "Correo Electrónico", fontSize = textSize) },
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(bottom = 16.dp)
                        .border(width = 1.dp, color = Color.LightGray, shape = RoundedCornerShape(20.dp))
                        .testTag("emailField"),
                    keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Next)
                )

                TextField(
                    shape = RoundedCornerShape(20.dp),
                    value = password.value,
...
                    placeholder = { Text(text = "Contraseña", fontSize = textSize) },
                    visualTransformation = PasswordVisualTransformation(),
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(bottom = 16.dp)
                        .border(width = 1.dp, color = Color.LightGray, shape = RoundedCornerShape(20.dp))
                        .testTag("passwordField"), // Agregado testTag
                    keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Done)
                )

                if (loginError.value) {
                    Text(
                        text = "Correo o contraseña incorrectos",
...
                            onFailure = { loginError.value = true }
                        )
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(bottom = 8.dp)
                        .testTag("loginButton"),
                    colors = ButtonDefaults.buttonColors(containerColor = Color(0xFF00B0FF))
                ) {
                    Text(text = "Iniciar sesión", color = Color.White, fontWeight = FontWeight.Bold)
                }


...
